03-filesystem-xds/envoy.lds.yml
---
resources:
- '@type': type.googleapis.com/envoy.config.listener.v3.Listener
  name: default_80
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 80
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        stat_prefix: http_proxy
        access_log:
        - name: envoy.access_loggers.stdout
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
        http_filters:
        - name: envoy.filters.http.router
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        route_config:
          name: default
          virtual_hosts:
          - name: default
            domains: ['*']
            routes:
            - match:
                prefix: /
              route:
                cluster: echo
